--- a/.github/workflows/blobs.yml
+++ b/.github/workflows/blobs.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   update:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     strategy:
       fail-fast: false
@@ -46,8 +46,8 @@ jobs:
           sudo apt update
           DEBIAN_FRONTEND=noninteractive sudo apt install -yq \
             attr ccache clang golang libbrotli-dev \
-            libgtest-dev libprotobuf-dev libunwind-dev libzstd-dev linux-modules-extra-$(uname -r) \
-            lld protobuf-compiler zipalign
+            libgtest-dev libprotobuf-dev libunwind-dev libpcre2-dev libzstd-dev \
+            linux-modules-extra-$(uname -r) lld protobuf-compiler zipalign
           sudo modprobe erofs f2fs
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
