Revert "Update blobs.yml"
This reverts commit 49a6ddc8a92a7d513c363c6943dc24235571e5ad.

--- a/.github/workflows/blobs.yml
+++ b/.github/workflows/blobs.yml
@@ -19,6 +19,8 @@ jobs:
             path: "unica/patches/mass_cam"
           - module: "Non-eSE blobs"
             path: "unica/patches/nfc"
+          - module: "Optical FOD blobs"
+            path: "unica/patches/product_feature/fingerprint/optical_fod"
           - module: "Side fingerprint sensor blobs"
             path: "unica/patches/product_feature/fingerprint/side_fp"
           - module: "VNDK 30 apex"
@@ -27,6 +29,14 @@ jobs:
             path: "unica/patches/vndk/31"
           - module: "VNDK 32 apex"
             path: "unica/patches/vndk/32"
+          - module: "VNDK 33 apex"
+            path: "unica/patches/vndk/33"
+          - module: "(a71) OS proprietary blobs"
+            path: "target/a71/patches/stock_blobs"
+          - module: "(m52xq) OS proprietary blobs"
+            path: "target/m52xq/patches/stock_blobs"
+          - module: "(r8q) OS proprietary blobs"
+            path: "target/r8q/patches/stock_blobs"
           - module: "(r8q) /vendor proprietary blobs"
             path: "target/r8q/patches/vendor"
 
