unica: set up FOTA implementation
- Sign official builds with proper sign keys
- Add ROM_BUILD_TIMESTAMP flag
- Add build_info.txt in ROM zip

Change-Id: Ic2784f632862b3aeba8b8f2a7cf83e4552d9165f

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 out/
 
 # Cert
+unica/security/unica_ota.x509.pem
+unica/security/unica_ota.pk8
 unica/security/unica_platform.x509.pem
 unica/security/unica_platform.pk8
 
