--- a/.gitattributes
+++ b/.gitattributes
@@ -28,5 +28,6 @@ unica/patches/vndk/30/** binary
 target/a52sxq/patches/wpss/vendor/firmware/** binary
 target/a71/patches/*/*/** binary
 target/a73xq/patches/wpss/vendor/firmware/** binary
+target/b0q/patches/ultra/system/** binary
 target/m52xq/patches/vendor/vendor/** binary
 target/r8q/patches/vendor/*/** binary
