--- a/.github/workflows/blobs.yml
+++ b/.github/workflows/blobs.yml
@@ -33,6 +33,8 @@ jobs:
             path: "unica/patches/vndk/33"
           - module: "(a71) OS proprietary blobs"
             path: "target/a71/patches/stock_blobs"
+          - module: "(b0q) Ultra device blobs"
+            path: "target/b0q/patches/ultra"
           - module: "(m52xq) OS proprietary blobs"
             path: "target/m52xq/patches/stock_blobs"
           - module: "(r8q) OS proprietary blobs"
