unica: patches: ultra: common-ize
Change-Id: I0fa70725aea4e54f5bf02f7a92a640336feddabe

--- a/.github/workflows/blobs.yml
+++ b/.github/workflows/blobs.yml
@@ -23,6 +23,8 @@ jobs:
             path: "unica/patches/product_feature/fingerprint/optical_fod"
           - module: "Side fingerprint sensor blobs"
             path: "unica/patches/product_feature/fingerprint/side_fp"
+          - module: "Ultra device blobs"
+            path: "unica/patches/ultra"
           - module: "UWB blobs"
             path: "unica/patches/uwb"
           - module: "VNDK 30 apex"
@@ -33,8 +35,6 @@ jobs:
             path: "unica/patches/vndk/33"
           - module: "(a71) OS proprietary blobs"
             path: "target/a71/patches/stock_blobs"
-          - module: "(b0q) Ultra device blobs"
-            path: "target/b0q/patches/ultra"
           - module: "(m52xq) OS proprietary blobs"
             path: "target/m52xq/patches/stock_blobs"
           - module: "(r8q) OS proprietary blobs"
