scripts: update_prebuilt_blobs: partially revert 14a06eb
Change-Id: I5a6e5b64b3a4301ef2b17d898208ae2a896d2173

--- a/.github/workflows/blobs.yml
+++ b/.github/workflows/blobs.yml
@@ -33,6 +33,8 @@ jobs:
             path: "unica/patches/vndk/31"
           - module: "VNDK 33 apex"
             path: "unica/patches/vndk/33"
+          - module: "Samsung China apps"
+            path: "unica/mods/china"
           - module: "(a71) OS proprietary blobs"
             path: "target/a71/patches/stock_blobs"
           - module: "(m52xq) OS proprietary blobs"
