--- a/.gitattributes
+++ b/.gitattributes
@@ -35,3 +35,4 @@ target/*/patches/china/vendor/firmware/** binary
 target/m52xq/patches/vendor/vendor/** binary
 target/r8q/patches/mainline-fix/** binary
 target/r8q/patches/vendor/*/** binary
+target/x1q/patches/vendor/*/** binary
