unica: patches: spf: Support for ESSI side_fp

--- a/.github/workflows/blobs.yml
+++ b/.github/workflows/blobs.yml
@@ -25,8 +25,10 @@ jobs:
             path: "unica/patches/nfc/essi"
           - module: "Optical FOD blobs"
             path: "unica/patches/product_feature/fingerprint/optical_fod"
-          - module: "Side fingerprint sensor blobs"
-            path: "unica/patches/product_feature/fingerprint/side_fp"
+          - module: "Side fingerprint sensor blobs (qssi)"
+            path: "unica/patches/product_feature/fingerprint/side_fp/qssi"
+          - module: "Side fingerprint sensor blobs (essi)"
+            path: "unica/patches/product_feature/fingerprint/side_fp/essi"
           - module: "Ultra device blobs"
             path: "unica/patches/ultra"
           - module: "UWB blobs"
