--- a/.github/workflows/blobs.yml
+++ b/.github/workflows/blobs.yml
@@ -27,8 +27,10 @@ jobs:
             path: "unica/patches/product_feature/fingerprint/optical_fod"
           - module: "Side fingerprint sensor blobs"
             path: "unica/patches/product_feature/fingerprint/side_fp"
-          - module: "Ultra device blobs"
-            path: "unica/patches/ultra"
+          - module: "Ultra device blobs (qssi)"
+            path: "unica/patches/ultra/qssi"
+          - module: "Ultra device blobs (essi)"
+            path: "unica/patches/ultra/essi"
           - module: "UWB blobs"
             path: "unica/patches/uwb"
           - module: "VNDK 30 apex"
