unica: mods: wallpaper: init
Change-Id: I4cb10a1d3580ab708904aa42e28c85c2fd16373b

--- a/.gitattributes
+++ b/.gitattributes
@@ -21,6 +21,7 @@
 unica/flashable-zip/updater binary
 unica/mods/eureka/system/** binary
 unica/mods/pif/system/bin/rezetprop binary
+unica/mods/wallpaper/e1q/** binary
 unica/patches/deknox/system/** binary
 unica/patches/product_feature/fingerprint/optical_fod/system/** binary
 unica/patches/product_feature/resolution/system/** binary
