--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,9 +14,19 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [a52q]
+        target: [r9q]
 
     steps:
+      - run: df -h
+
+      - name: "node-cleanup"
+        run: |
+          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
+          sudo docker image prune --all --force
+          sudo docker builder prune -a      
+
+      - run: df -h
+
       - name: Checkout repo
         uses: actions/checkout@v4
         with:
