--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,15 +17,11 @@ jobs:
         target: [a52q, a52sxq, a52xq, a71, a72q, a73xq, b0q, dm1q, dm2q, dm3q, g0q, m52xq, r0q, r8q, r9q, r9q2]
 
     steps:
-      - run: df -h
-
-      - name: "node-cleanup"
+      - name: Free disk space through docker
         run: |
           sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
           sudo docker image prune --all --force
           sudo docker builder prune -a      
-
-      - run: df -h
 
       - name: Checkout repo
         uses: actions/checkout@v4
