--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,8 +15,26 @@ jobs:
       fail-fast: false
       matrix:
         target: [a52q, a52sxq, a52xq, a71, a72q, a73xq, b0q, dm1q, dm2q, dm3q, g0q, m52xq, r0q, r8q, r9q, r9q2]
+    
+      
 
     steps:
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@main
+        with:
+          tool-cache: true
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          docker-images: true
+          swap-storage: true
+
+      - name: Free disk space through docker
+        run: |
+          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL || echo "Directory not found, skipping..."
+          sudo docker image prune --all --force || echo "Docker image prune failed, skipping..."
+          sudo docker builder prune -a || echo "Docker builder prune failed, skipping..."
       - name: Checkout repo
         uses: actions/checkout@v4
         with:
