--- a/.github/workflows/blobs.yml
+++ b/.github/workflows/blobs.yml
@@ -54,7 +54,18 @@ jobs:
         with:
           submodules: 'recursive'
 
-      - name: Free disk space
+      - name: Free disk space (1/3)
+        run: |
+          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
+          sudo docker image prune --all --force
+          sudo docker builder prune -a
+
+      - name: Free disk space (2/3)
+        uses: jlumbroso/free-disk-space@main
+        with:
+          tool-cache: true
+
+      - name: Free disk space (3/3)
         uses: rokibhasansagar/slimhub_actions@main
         with:
           retain: 'compiler_cmake'
