--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,18 @@ jobs:
         with:
           submodules: 'recursive'
 
-      - name: Free disk space
+      - name: Free disk space (1/3)
+        run: |
+          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
+          sudo docker image prune --all --force
+          sudo docker builder prune -a
+
+      - name: Free disk space (2/3)
+        uses: jlumbroso/free-disk-space@main
+        with:
+          tool-cache: true
+
+      - name: Free disk space (3/3)
         uses: rokibhasansagar/slimhub_actions@main
         with:
           retain: 'compiler_cmake'
@@ -65,7 +76,6 @@ jobs:
         run: |
           source ./buildenv.sh ${{ matrix.target }}
           ./scripts/extract_fw.sh
-          ./scripts/cleanup.sh odin
 
       - name: Build ROM
         run: |
