dm*q: Add support for S91*0 firmwares
Change-Id: If04ab77ca20996c4ee8ee4ef43b4222de68a5c87

--- a/.gitattributes
+++ b/.gitattributes
@@ -31,6 +31,7 @@ unica/patches/vndk/30/** binary
 target/a52sxq/patches/wpss/vendor/firmware/** binary
 target/a71/patches/*/*/** binary
 target/a73xq/patches/wpss/vendor/firmware/** binary
+target/*/patches/china/vendor/firmware/** binary
 target/m52xq/patches/vendor/vendor/** binary
 target/r8q/patches/mainline-fix/** binary
 target/r8q/patches/vendor/*/** binary
