--- a/.github/workflows/blobs.yml
+++ b/.github/workflows/blobs.yml
@@ -41,6 +41,12 @@ jobs:
             path: "unica/mods/eureka"
           - module: "(a71) OS proprietary blobs"
             path: "target/a71/patches/stock_blobs"
+          - module: "(dm1q) China firmware blobs"
+            path: "target/dm1q/patches/china"
+          - module: "(dm2q) China firmware blobs"
+            path: "target/dm2q/patches/china"
+          - module: "(dm3q) China firmware blobs"
+            path: "target/dm3q/patches/china"
           - module: "(m52xq) OS proprietary blobs"
             path: "target/m52xq/patches/stock_blobs"
           - module: "(r8q) OS proprietary blobs"
