--- a/.gitattributes
+++ b/.gitattributes
@@ -17,6 +17,9 @@
 *.qmg binary
 *.webp binary
 
+# Prebuilt dependencies
+external/zipalign/zipalign binary
+
 # ROM-specific prebuilt blobs
 unica/flashable-zip/updater binary
 unica/mods/eureka/system/** binary
