external/android-tools: switch to my own fork
Change-Id: Id144e11f9e95ff51dd8641e6d4cbdd590a63ad2b

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "external/android-tools"]
 	path = external/android-tools
-	url = https://github.com/nmeum/android-tools.git
+	url = https://github.com/salvogiangri/android-tools.git
 	ignore = dirty
 [submodule "external/apktool"]
 	path = external/apktool
