external/signapk: switch to my own fork
Change-Id: I494197a70ca38bfc027dfc1f25c8fe4c9e175017

--- a/.gitmodules
+++ b/.gitmodules
@@ -18,6 +18,10 @@
 	path = external/samfirm.js
 	url = https://github.com/DavidArsene/samfirm.js.git
 	ignore = dirty
+[submodule "external/signapk"]
+	path = external/signapk
+	url = https://github.com/salvogiangri/signapk.git
+	ignore = dirty
 [submodule "external/smali"]
 	path = external/smali
 	url = https://github.com/google/smali.git
