--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 out/
 
 # Cert
-unica/security/unica_ota.x509.pem
-unica/security/unica_ota.pk8
-unica/security/unica_platform.x509.pem
-unica/security/unica_platform.pk8
+security/unica_ota.x509.pem
+security/unica_ota.pk8
+security/unica_platform.x509.pem
+security/unica_platform.pk8
 
 #
 # We don't want to ignore the following even if they are dot-files
