workflows: add essi blobs

--- a/.github/workflows/blobs.yml
+++ b/.github/workflows/blobs.yml
@@ -13,12 +13,16 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - module: "Galaxy A16 5G (a16xxx)"
+            path: "prebuilts/samsung/a16xxx"
           - module: "Galaxy A52 (a52qnsxx)"
             path: "prebuilts/samsung/a52qnsxx"
           - module: "Galaxy A52s 5G (a52sxqxx)"
             path: "prebuilts/samsung/a52sxqxx"
           - module: "Galaxy A73 5G (a73xqxx)"
             path: "prebuilts/samsung/a73xqxx"
+          - module: "Galaxy S22 Ultra (b0sxxx)"
+            path: "prebuilts/samsung/b0sxxx"
           - module: "Galaxy Z Fold5 (b5qxxx)"
             path: "prebuilts/samsung/b5qxxx"
           - module: "Galaxy S23 (dm1qkdiw)"
@@ -29,8 +33,12 @@ jobs:
             path: "prebuilts/samsung/e1qzcx"
           - module: "Galaxy Tab S9 (gts9xxx)"
             path: "prebuilts/samsung/gts9xxx"
+          - module: "Galaxy Tab S9 FE 5G (gts9fexx)"
+            path: "prebuilts/samsung/gts9fexx"
           - module: "Galaxy S22 (r0qxxx)"
             path: "prebuilts/samsung/r0qxxx"
+          - module: "Galaxy S22 (r0sxxx)"
+            path: "prebuilts/samsung/r0sxxx"
           - module: "Galaxy S21 FE 5G (r9qxxx)"
             path: "prebuilts/samsung/r9qxxx"
           - module: "Galaxy S23 FE (r11sxxx)"
