buildenv.sh: do not run build_dependencies when sourced
Change-Id: I4a0665db43ac49f62ab61c9da9e661b7819517e8

--- a/.github/workflows/blobs.yml
+++ b/.github/workflows/blobs.yml
@@ -85,7 +85,9 @@ jobs:
           cache: 'gradle'
 
       - name: Build dependencies
-        run: source ./buildenv.sh a52sxq
+        run: |
+          source ./buildenv.sh a52sxq
+          ./scripts/build_dependencies.sh
 
       - name: Update prebuilt blobs
         run: |
