--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,7 @@
-name: Build and Release M51
+name: Build and Release UN1CA ROM for M51
 
 on:
   workflow_dispatch:
-  pull_request:
   push:
     branches:
       - 'fourteen'
@@ -10,44 +9,30 @@ on:
 jobs:
   build:
     runs-on: ubuntu-24.04
-
-    strategy:
-      fail-fast: false
-      matrix:
-        target: [m51]
+    timeout-minutes: 120
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
         with:
           submodules: 'recursive'
 
-      - name: Free disk space (1/3)
+      - name: Free disk space
         run: |
-          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
-          sudo docker image prune --all --force
-          sudo docker builder prune -a
-
-      - name: Free disk space (2/3)
-        uses: jlumbroso/free-disk-space@main
-        with:
-          tool-cache: true
-
-      - name: Free disk space (3/3)
-        uses: rokibhasansagar/slimhub_actions@main
-        with:
-          retain: 'compiler_cmake'
+          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc
+          sudo docker system prune -a -f
 
       - name: Set up build environment
         run: |
-          sudo apt update
-          DEBIAN_FRONTEND=noninteractive sudo apt install -yq \
-            attr ccache clang ffmpeg golang \
-            libbrotli-dev libgtest-dev libprotobuf-dev libunwind-dev libpcre2-dev \
-            libzstd-dev linux-modules-extra-$(uname -r) lld protobuf-compiler webp
-          sudo modprobe erofs f2fs
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          sudo apt-get update
+          sudo apt-get install -y \
+            ccache clang git-core gnupg flex bison gperf build-essential \
+            zip curl zlib1g-dev gcc-multilib g++-multilib libc6-dev-i386 \
+            lib32ncurses5-dev x11proto-core-dev libx11-dev lib32z1-dev \
+            libgl1-mesa-dev libxml2-utils xsltproc unzip fontconfig python3 \
+            libssl-dev rsync liblz4-tool repo
+
+          # Platform keys
           echo -n "${{ secrets.PLATFORM_KEY_PK8 }}" | base64 --decode > security/unica_platform.pk8
           echo -n "${{ secrets.PLATFORM_KEY_PEM }}" | base64 --decode > security/unica_platform.x509.pem
 
@@ -56,46 +41,53 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '11'
-          cache: 'gradle'
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 'latest'
-
-      - name: Build dependencies
-        run: source ./buildenv.sh ${{ matrix.target }}
-
-      - name: Download stock firmwares
-        run: |
-          source ./buildenv.sh ${{ matrix.target }}
-          ./scripts/download_fw.sh
-
-      - name: Extract stock firmwares
-        run: |
-          source ./buildenv.sh ${{ matrix.target }}
-          ./scripts/extract_fw.sh
 
       - name: Build ROM
         run: |
-          source ./buildenv.sh ${{ matrix.target }}
+          source ./buildenv.sh m51
+          ./scripts/download_fw.sh
+          ./scripts/extract_fw.sh
           ./scripts/make_rom.sh
 
-      - name: Find ROM zip file
+          # Ensure output directory exists
+          mkdir -p out/target/product/m51
+
+          # Create ZIP if not automatically generated
+          if [ ! -f out/target/product/m51/UN1CA*.zip ]; then
+            cd out/target/product/m51
+            zip -r UN1CA-m51-$(date +%Y%m%d).zip *.img
+            cd ../../../../..
+          fi
+
+      - name: Find ROM file
         id: find-rom
         run: |
-          ROM_FILE=$(find out/target/product/${{ matrix.target }} -name 'UN1CA*.zip' -o -name 'UN1CA*.tar' | head -1)
-          echo "ROM_FILE=$ROM_FILE" >> $GITHUB_OUTPUT
-          echo "ROM_NAME=$(basename $ROM_FILE)" >> $GITHUB_OUTPUT
-          echo "Found ROM file: $ROM_FILE"
+          ROM_PATH=$(find out/target/product/m51 -name 'UN1CA*.zip' -o -name 'UN1CA*.tar' | head -n1)
+          if [ -z "$ROM_PATH" ]; then
+            echo "::error::No ROM file found!"
+            exit 1
+          fi
+          echo "ROM_FILE=$ROM_PATH" >> $GITHUB_OUTPUT
+          echo "ROM_NAME=$(basename "$ROM_PATH")" >> $GITHUB_OUTPUT
+          echo "Found ROM: $ROM_PATH"
 
-      - name: Upload ROM to GitHub Releases
-        if: github.event_name != 'pull_request'
+      - name: Upload ROM to Releases
         uses: softprops/action-gh-release@v1
         with:
           files: ${{ steps.find-rom.outputs.ROM_FILE }}
-          tag_name: build-${{ github.run_id }}
-          name: "UN1CA ROM Build #${{ github.run_number }}"
-          body: "Automated build of UN1CA ROM for ${{ matrix.target }}"
+          tag_name: build-${{ github.run_number }}
+          name: "UN1CA ROM for M51 (Build ${{ github.run_number }})"
+          body: |
+            Automated build of UN1CA ROM for Samsung M51
+            Build date: $(date +'%Y-%m-%d %H:%M:%S')
           draft: false
           prerelease: false
+
+      - name: Upload build logs (debug)
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-logs
+          path: |
+            out/verbose.log
+            out/error.log
