--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,7 +84,9 @@ jobs:
       - name: Find ROM zip file
         id: find-rom
         run: |
-          ROM_FILE=$(find /out -name 'UN1CA*.zip' | head -1)
+          SRC_DIR
+          OUT_DIR="$SRC_DIR/out"
+          ROM_FILE=$(find $OUT_DIR -name 'UN1CA*.zip' | head -1)
           echo "ROM_FILE=$ROM_FILE" >> $GITHUB_OUTPUT
           echo "ROM_NAME=$(basename $ROM_FILE)" >> $GITHUB_OUTPUT
           echo "Found ROM file: $ROM_FILE"
